Add table-of-contents collapse option to opentextbook theme

--- a/wp-content/plugins/pressbooks-textbook/themes-book/opentextbook/style.css
+++ b/wp-content/plugins/pressbooks-textbook/themes-book/opentextbook/style.css
@@ -71,6 +71,18 @@ ol.alphalist li::before{
 .page-title {
 	font-weight: normal;
 }
+
+#toc h4, #toc li.chapter {
+	padding-left: 10px;
+	text-indent: -10px;
+}
+
+#toc .dashicons {
+	color: #aaa;
+}
+#toc h4:hover .dashicons {
+	color: #777;
+}
 /****************************************
 	Structure
 *****************************************/
