Hide glossdef for lardbucket; add JS to add def as hoverover

--- a/wp-content/plugins/pressbooks-textbook/themes-book/opentextbook/css/lb.css
+++ b/wp-content/plugins/pressbooks-textbook/themes-book/opentextbook/css/lb.css
@@ -39,4 +39,11 @@ div.im_block h3:first-child{
 	font-size:85%;
 	line-height:1.3em;
 }
+.im_glossdef {
+	display: none; 
+}
+.im_glossterm.hoverdef {
+	cursor: help;
+  	border-bottom: 1px dotted #999999;
+}
 
