--- a/wp-content/plugins/candela-utility/themes/candela/style.css
+++ b/wp-content/plugins/candela-utility/themes/candela/style.css
@@ -421,3 +421,17 @@ a:active.btn.blue {
 ul.lti-mapping {
 	list-style: none;
 }
+
+h3.expanded {
+	padding-left: 46px;
+	background:  url("/wp-includes/images/toggle-arrow-2x.png") 0 -46px no-repeat;
+	height: 46px;
+	line-height: 46px;
+}
+
+h3.collapsed {
+	padding-left: 46px;
+	background:  url("/wp-includes/images/toggle-arrow-2x.png") 0 0 no-repeat;
+	height: 46px;
+	line-height: 46px;
+}
