--- a/wp-content/plugins/candela-utility/themes/candela-advanced/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/candela-advanced/css/custom.css
@@ -92,7 +92,9 @@ nav {
 	display: none;
 }
 .book-info {
-	margin-top: 0;
+    margin-top: 0;
+    color: #ffffff;
+    text-align: center;
 }
 .call-to-action {
 	margin-top: 0;
@@ -378,6 +380,10 @@ div#wrap {
 }
 .footer table td {
 	padding: 0.5em !important;
+}
+
+.lti-mapping {
+    display: none;
 }
 
 /* temporary for may faculty review */
