--- a/wp-content/plugins/candela-utility/themes/candela/style.css
+++ b/wp-content/plugins/candela-utility/themes/candela/style.css
@@ -435,3 +435,18 @@ h3.collapsed {
 	height: 46px;
 	line-height: 46px;
 }
+
+.book-title {
+    font: 1.2em/1.6em "Minion Pro", "Times New Roman", Times, serif;
+    margin: 0 auto;
+    padding: 10px 60px 0;
+    text-align: center;
+    width: 520px;
+}
+
+.book-title a {
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: none;
+}
+
