--- a/wp-content/plugins/candela-utility/themes/candela-clean/style.css
+++ b/wp-content/plugins/candela-utility/themes/candela-clean/style.css
@@ -479,3 +479,10 @@ h3.collapsed {
 	height: 46px;
 	line-height: 46px;
 }
+
+.author-wrap .author-name {
+    text-transform: uppercase;
+    display: inline;
+    font: normal 0.75em "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, Tahoma, sans-serif;
+    letter-spacing: 0;
+}
