--- a/wp-content/plugins/candela-utility/themes/washington/style.css
+++ b/wp-content/plugins/candela-utility/themes/washington/style.css
@@ -423,14 +423,14 @@ ul.lti-mapping {
 	list-style: none;
 }
 
-h3.expanded {
+div.expanded {
 	padding-left: 46px;
 	background:  url("/wp-includes/images/toggle-arrow-2x.png") 0 -46px no-repeat;
 	height: 46px;
 	line-height: 46px;
 }
 
-h3.collapsed {
+div.collapsed {
 	padding-left: 46px;
 	background:  url("/wp-includes/images/toggle-arrow-2x.png") 0 0 no-repeat;
 	height: 46px;
