--- a/wp-content/plugins/candela-utility/themes/washington/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/washington/css/custom.css
@@ -308,12 +308,28 @@ div#wrap {
 	text-transform: uppercase;
 	margin-top: 1em;
 }
+
+#content .h3-styling {
+	font-size: 1em;
+	text-transform: uppercase;
+	margin-top: 1em;
+  text-align: center;
+}
+
 #content h4 {
 	font-size: 0.9em;
 	font-weight: 400;
 	text-transform: uppercase;
 	color: #1ABC9C;
 }
+
+#content .h4-styling {
+  font-size: 1em;
+	text-transform: uppercase;
+	margin-top: 1em;
+  margin-bottom: 1em;
+}
+
 #content h5 {
 	font-size: 0.8em;
 	font-weight: 400;
