Insert feature in all themes that allows sighted and users with disabilities to skip navigation and go straight to the main content

--- a/wp-content/plugins/candela-utility/themes/candela-advanced/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/candela-advanced/css/custom.css
@@ -424,3 +424,19 @@ div#wrap {
 .description-book-info{
     display: none;
 }
+
+
+.skip-to-content a {
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+}
+
+.skip-to-content a:focus {
+  position: static;
+  width: auto;
+  height: auto;
+}
