--- a/wp-content/plugins/candela-utility/themes/washington/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/washington/css/custom.css
@@ -477,3 +477,18 @@ span.edit-link a:hover {
   color: #fff;
   background-color: #03a9f4;
 }
+
+.skip-to-content a {
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+}
+
+.skip-to-content a:focus {
+  position: static;
+  width: auto;
+  height: auto;
+}
