--- a/wp-content/plugins/candela-utility/themes/candela-clean/style.css
+++ b/wp-content/plugins/candela-utility/themes/candela-clean/style.css
@@ -506,3 +506,18 @@ h3.collapsed {
 	font-variant: normal;
 	font-weight: normal;
 }
+
+.skip-to-content a {
+  position:absolute;
+  left:-10000px;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+}
+
+.skip-to-content a:focus {
+  position: static;
+  width: auto;
+  height: auto;
+}
