--- a/wp-content/plugins/candela-utility/themes/candela-clean/style.css
+++ b/wp-content/plugins/candela-utility/themes/candela-clean/style.css
@@ -466,14 +466,14 @@ ul.lti-mapping {
 	list-style: none;
 }
 
-h3.expanded {
+div.expanded {
 	padding-left: 46px;
 	background:  url("/wp-includes/images/toggle-arrow-2x.png") 0 -46px no-repeat;
 	height: 46px;
 	line-height: 46px;
 }
 
-h3.collapsed {
+div.collapsed {
 	padding-left: 46px;
 	background:  url("/wp-includes/images/toggle-arrow-2x.png") 0 0 no-repeat;
 	height: 46px;
@@ -487,22 +487,29 @@ h3.collapsed {
     letter-spacing: 0;
 }
 
+
+/****************************/
+/*  ATTRIBUTES HEADERS FIX  */
+/****************************/
+
 #content .h3-styling {
-	font-size: 1em;
-	text-transform: uppercase;
-	margin-top: 1em;
-  text-align: center;
 	font-family: "Roboto Condensed", sans-serif;
 	font-variant: normal;
 	font-weight: normal;
+	text-transform: uppercase;
+	text-align: center;
+	margin: 0 0 20px 0;
+
 }
 
 #content .h4-styling {
-  font-size: 1em;
-	text-transform: uppercase;
-	margin-top: 1em;
-  margin-bottom: 1em;
 	font-family: "Roboto Condensed", sans-serif;
 	font-variant: normal;
 	font-weight: normal;
+	text-transform: uppercase;
+  font-size: 1em;
+	height: 19px;
+	width: 720px;
+	margin: 0 0 20px 0;
+	line-height: normal;
 }
