--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Bombadil
-Description: Lumen Learnings base content theme
+Theme Name: Washington
+Description: Fork of candela advanced
 Author: Lumen Learning
 Version: 0.1
 Template: pressbooks-book
