Fix bambadil/washington inception issue, and change bombadil image and title in style.css

--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Washington
-Description: Fork of candela advanced
+Theme Name: Bombadil
+Description: One Theme To Rule Them All
 Author: Lumen Learning
 Version: 0.1
 Template: pressbooks-book
