--- a/wp-content/plugins/candela-utility/themes/washington/style.css
+++ b/wp-content/plugins/candela-utility/themes/washington/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Bombadil
+Theme Name: Washington
 Description: Lumen Learnings base content theme
 Author: Lumen Learning
 Version: 0.1
