--- a/wp-content/plugins/candela-utility/themes/bombadil/style.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/style.css
@@ -5,6 +5,9 @@ Author: Lumen Learning
 Version: 0.1
 Template: pressbooks-book
 Tags: Pressbooks Textbook
+
+The screenshot.png for this theme was downloaded from https://www.flickr.com/photos/queerdood/5541802963/
+and is used under a CC BY License.
 */
 
 @import url("../../../pressbooks/themes-book/pressbooks-book/style.css");
