add 'LumenMastery' Logo to footer, and fix background color for footer

--- a/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
@@ -691,3 +691,9 @@ counter-increment: none;
 #next {
   float: right;
 }
+
+.lumen-footer-logo {
+  background: #fafafa;
+  margin-bottom: -.3em;
+  padding: 0;
+}
