--- a/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
+++ b/wp-content/plugins/candela-utility/themes/bombadil/css/custom.css
@@ -677,8 +677,7 @@ counter-increment: none;
   color: #077fab;
   text-decoration: none;
   border: 2px solid #077fab;
-  border-radius: 10px;
-  background opacity: 0.10;
+  border-radius: 7px;
   padding: 5px 25px;
   width: 135px;
   text-align: center;
@@ -696,4 +695,22 @@ counter-increment: none;
   background: #fafafa;
   margin-bottom: -.3em;
   padding: 0;
+}
+
+.edit-course-btn {
+  margin: 15px 0 30px 0;
+  height: 24px;
+}
+
+#edit {
+  font-size: 10pt;
+  font-weight: 600;
+  color: #26a69a;
+  text-decoration: none;
+  border: 2px solid #26a69a;
+  border-radius: 7px;
+  background-color: rgba(38, 166, 154, 0.1);
+  padding: 9px 17px;
+  text-align: center;
+  text-decoration: none;
 }
